# parser_fias

./: .gitignore  README.md  pyproject.toml
csv/: districts.csv  settlements.csv
parser_fias/: parser_subject.py  parser_udmurtia.py
parser_fias/ulits/: app.py  get_csv.py  parser.py  utils.py  work_with_csv.py
tests/: test_parser_fias.py
