[tool.poetry]
name = "parser_fias"
version = "0.1.0"
description = ""
authors = ["Julia Ivanova <murova47@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
bs4 = "^0.0.1"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
